test(logs): keep tests compatible with project Java version